--- a/phpstan.neon
+++ b/phpstan.neon
@@ -8,12 +8,15 @@ includes:
 #	- vendor/phpstan/phpstan-phpunit/rules.neon
 
 parameters:
+	autoload_files:
+		- bin/.phpunit/phpunit-7.5/vendor/autoload.php
 	symfony:
 		container_xml_path: '%rootDir%/../../../var/cache/dev/srcApp_KernelDevDebugContainer.xml'
 #	excludes_analyse:
 #		- ../../../tests/temp
 #		- ../../../temp
 	ignoreErrors:
+		- '#Dynamic call to static method PHPUnit\\Framework\\.*#'
 #		- '/Method Dibi\\Fluent\:\:from\(\) invoked with 1 parameter, at least 2 required./'
 #		- '/Call to an undefined method Dibi\\Fluent\:\:union\(\)./'
 #		- '/Access to an undefined property Dibi\\Row\:\:\$[a-zA-Z_]+\./'
