--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,9 @@
         "symfony/validator": "^4.0",
         "symfony/web-link": "^4.0",
         "symfony/webpack-encore-bundle": "^1.7",
-        "symfony/yaml": "^4.0"
-    },
+        "symfony/yaml": "^4.0",
+	  	"ext-json": "*"
+	},
     "require-dev": {
         "phpstan/phpstan": "^0.11.19",
         "phpstan/phpstan-doctrine": "^0.11.6",
@@ -85,7 +86,7 @@
             "@auto-scripts"
         ],
 	  	"app:tests": "php bin/phpunit",
-	  	"app:phpstan": "phpstan analyse src tests -c phpstan.neon --level max",
+	  	"app:phpstan": "phpstan analyse src -c phpstan.neon --level max",
 		"app:ecs": "ecs check src tests",
 		"app:ecsfix": "ecs check src tests --fix",
 		"app:all": [
