--- a/ecs.yaml
+++ b/ecs.yaml
@@ -13,6 +13,7 @@ parameters:
     Symplify\CodingStandard\Sniffs\DependencyInjection\NoClassInstantiationSniff:
       - 'src/Crawler/AbstractApiDataProvider.php'
     Symplify\CodingStandard\Fixer\LineLength\LineLengthFixer: ~
+    PhpCsFixer\Fixer\ControlStructure\YodaStyleFixer: ~
         
 imports:
   - { resource: 'vendor/symplify/easy-coding-standard/config/set/clean-code.yaml' }
