--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
         "minwork/array": "^1.9",
+        "nette/utils": "^3.0",
         "sensio/framework-extra-bundle": "^5.1",
         "softonic/graphql-client": "^1.2",
         "symfony/apache-pack": "^1.0",
@@ -30,9 +32,8 @@
         "symfony/validator": "^4.0",
         "symfony/web-link": "^4.0",
         "symfony/webpack-encore-bundle": "^1.7",
-        "symfony/yaml": "^4.0",
-	  	"ext-json": "*"
-	},
+        "symfony/yaml": "^4.0"
+    },
     "require-dev": {
         "phpstan/phpstan": "^0.11.19",
         "phpstan/phpstan-doctrine": "^0.11.6",
