--- a/ecs.yaml
+++ b/ecs.yaml
@@ -10,8 +10,10 @@ parameters:
     Symplify\CodingStandard\Sniffs\Debug\CommentedOutCodeSniff: ~
     Symplify\CodingStandard\Sniffs\Debug\DebugFunctionCallSniff:
       - 'src/Controller/TestController.php'
-    Symplify\CodingStandard\Sniffs\DependencyInjection\NoClassInstantiationSniff:
-      - 'src/Crawler/AbstractApiDataProvider.php'
+    Symplify\CodingStandard\Sniffs\DependencyInjection\NoClassInstantiationSniff: ~
+#      - 'src/Crawler/AbstractApiDataProvider.php'
+#      - 'src/Controller/TestController.php'
+#      - 'src/Crawler/Aukro/AukroCrawler.php'
     Symplify\CodingStandard\Fixer\LineLength\LineLengthFixer: ~
     PhpCsFixer\Fixer\ControlStructure\YodaStyleFixer: ~
         
